--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,47 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Login</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-<link rel="stylesheet"
-	href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+<link type="text/css" rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	th:href="@{css/bootstrap.min.css}" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>User login</title>
 </head>
-
 <body>
-	<div class="container my-5">
-		<h3>Login</h3>
-		<div class="card">
-			<div class="card-body">
-				<div class="col-md-10">
-					<form action="#" th:action="@{/authenticate}"
-						th:object="${authenticationRequest}" method="post">
-						<div class="row">
-							<div class="form-group col-md-8">
-								<label for="username" class="col-form-label">Username</label> <input
-									type="text" th:field="*{username}" class="form-control"
-									id="username" placeholder="Username" />
-							</div>
-
-							<div class="form-group col-md-8">
-								<label for="password" class="col-form-label">Password</label> <input
-									type="password" th:field="*{password}" class="form-control"
-									id="password" placeholder="Password" />
-							</div>
-
-							<div class="col-md-6">
-								<input type="submit" class="btn btn-primary" value="Submit">
-							</div>
-						</div>
-					</form>
-				</div>
+	<div class="col-md-4 col-md-offset-4">
+		<div class="alert alert-danger" th:if="${param.error}">Invalid
+			username and password.</div>
+		<div class="alert alert-warning" th:if="${param.logout}">You
+			have been logged out.</div>
+		<form th:action="@{/login}" method="post">
+			<div>
+				<label> User Name : <input type="text" name="username"
+					class="form-control" />
+				</label>
 			</div>
-		</div>
+			<div>
+				<label> Password: <input type="password" name="password"
+					class="form-control" />
+				</label>
+			</div>
+			<div>
+				<input type="submit" value="Sign In" class="btn btn-primary" />
+			</div>
+		</form>
+		<a th:href="@{/signup}">Sign-up</a>
 	</div>
 </body>
-
 </html>
