--- a/src/main/resources/templates/layouts/dashboard_layout.html
+++ b/src/main/resources/templates/layouts/dashboard_layout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">MUM</title>
+<title layout:title-pattern="$CONTENT_TITLE">MUM</title>
 
 
 <meta charset="utf-8">
