sign up updates

--- a/src/main/resources/templates/fragments/dashboard_footer.html
+++ b/src/main/resources/templates/fragments/dashboard_footer.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<footer class="sticky-footer" th:fragment="footer">
+<footer class="sticky-footer" th:fragment="footer" style="position: fixed; bottom: 0;">
     <div class="container my-auto">
         <div class="copyright text-center my-auto">
             <span>Copyright ©2020 Zeppy Nayek. All rights reserved.</span>
