--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,17 +15,14 @@
 </head>
 <body>
 
-<!--<form ui-jp="parsley" th:action="@{/search)}"  method="get">-->
-<!--	<div class="row m-b">-->
-<!--		<div class="col-sm-6">-->
-<!--			Search by Name:-->
-<!--			<input id="filter" type="text" th:field="*{pName}" class="form-control input-sm w-auto inline m-r"/>-->
-<!--			<button class="md-btn md-fab m-b-sm indigo">-->
-<!--				<i class="material-icons md-24">&#xe8b6;</i>-->
-<!--			</button>-->
-<!--		</div>-->
-<!--	</div>-->
-<!--</form>-->
+<form ui-jp="parsley" th:action="@{/search}" th:object="${searchMessage}" method="get">
+	<div class="row m-b">
+		<div class="col-sm-6">
+			Search by Name: <input id="filter" type="text" th:field="*{search}" class="form-control input-sm w-auto inline m-r"/>
+			<button class="md-btn md-fab m-b-sm indigo"><i class="material-icons md-24">&#xe8b6;</i></button>
+		</div>
+	</div>
+</form>
 
 	<div sec:authorize="hasAuthority('ROLE_ADMIN')">Has Authority ADMIN</div>
 	<div sec:authorize="hasAuthority('ROLE_SELLER')">Has Authority SELLER</div>
