--- a/src/main/resources/templates/fragments/dashboard_header.html
+++ b/src/main/resources/templates/fragments/dashboard_header.html
@@ -7,7 +7,7 @@
 <body>
 <nav th:fragment="header" class="navbar navbar-expand navbar-dark bg-dark static-top">
 
-    <a class="navbar-brand mr-1" href="index.html" th:href="@{/index}">
+    <a class="navbar-brand mr-1" href="home.html" th:href="@{/home}">
         <div class="nav-header">
             <div class="logo"> Zeppy Nayek</span></div>
         </div>
