--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,7 +36,7 @@
 	</tr>
 
 	<div sec:authorize="hasAuthority('ROLE_SELLER')">
-		<a th:href="@{/addProduct}"
+		<a th:href="@{/product/addProduct}"
 		   class="btn btn-primary btn-sm mb-3">
 			Add Product
 		</a>
