Add cart and profile menu - logout - update header and footer styles

--- a/src/main/resources/templates/fragments/dashboard_footer.html
+++ b/src/main/resources/templates/fragments/dashboard_footer.html
@@ -5,10 +5,11 @@
 </head>
 <body>
 
-<footer class="sticky-footer" th:fragment="footer" style="position: fixed; bottom: 0;">
+<footer class="sticky-footer bg-dark navbar-brand mr-1" th:fragment="footer"
+	style="position: fixed; bottom: 0; width: 100%; height: 40px; color: white;">
     <div class="container my-auto">
         <div class="copyright text-center my-auto">
-            <span>Copyright ©2020 Zeppy Nayek. All rights reserved.</span>
+            <span>Copyright ©2020 Pharaohs Co. All rights reserved.</span>
         </div>
     </div>
 </footer>
