--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,26 +9,39 @@
 <body>
 
 	<div class="col" layout:fragment="main-content">
-	
-		<a th:href="@{/signup/buyer}">Buyer Sign Up</a>
-		<a th:href="@{/signup/seller}">Seller Sign Up</a>
-		<div th:if="${param.error}">Invalid Username and Password.</div>
-		<div th:if="${param.logout}">You have been logged out.</div>
-		<form th:action="@{/login}" method="post">
-			<div>
-				<label> User Name : <input type="text" name="username"
-					class="form-control" />
-				</label>
+		<div class="card text-white bg-dark mb-3" style="margin: auto; width: 40%; top: 60px">
+			<div class="card-header" style="margin: auto">Login</div>
+			<div class="card-body">
+				<div th:if="${param.error}">Invalid Username and Password.</div>
+				<div th:if="${param.logout}">You have been logged out.</div>
+				<form th:action="@{/login}" method="post">
+					<div>
+						<input type="text" name="username" class="form-control"
+							placeholder="Username" />
+					</div>
+					<div style="clear: both; display: block; height: 10px;"></div>
+					<div>
+						<input type="password" name="password" class="form-control"
+							placeholder="Password" />
+					</div>
+					<div style="clear: both; display: block; height: 10px;"></div>
+					<div>
+						<input type="submit" class="btn btn-primary form-control" value="Sign In" />
+					</div>
+				</form>
+				<div style="clear: both; display: block; height: 10px;"></div>
+				<div class="dropdown-divider"></div>
+				<div style="clear: both; display: block; height: 10px;"></div>
+				<div>
+					<a th:href="@{/signup/buyer}" class="dropdown-item" style="color: white;">New Buyer</a>
+				</div>
+				<div style="clear: both; display: block; height: 10px;"></div>
+				<div>
+					<a th:href="@{/signup/seller}" class="dropdown-item">New Seller</a>
+				</div>
 			</div>
-			<div>
-				<label> Password: <input type="password" name="password"
-					class="form-control" />
-				</label>
-			</div>
-			<div>
-				<input type="submit" value="Sign In" />
-			</div>
-		</form>
+		</div>
+
 	</div>
 
 </body>
