remember me - link address and payment method pages

--- a/src/main/resources/templates/fragments/dashboard_header.html
+++ b/src/main/resources/templates/fragments/dashboard_header.html
@@ -23,9 +23,9 @@
 		    <ul class="dropdown-menu dropdown-menu-right bg-dark">
 				<li class="dropdown-header">User Name</li>
 				<li><a class="dropdown-item" href="#">Edit Profile</a></li>
-				<li><a class="dropdown-item" href="#"
+				<li><a class="dropdown-item" th:href="@{/buyer/addAddress}"
 					sec:authorize="hasAuthority('ROLE_BUYER')">Edit Address</a></li>
-				<li><a class="dropdown-item" href="#"
+				<li><a class="dropdown-item" th:href="@{/buyer/addPayment}"
 					sec:authorize="hasAuthority('ROLE_BUYER')">Edit Payment Method</a></li>
 				<li><a class="dropdown-item" href="#"
 					 sec:authorize="hasAuthority('ROLE_BUYER')">Orders</a></li>
