--- a/src/main/resources/templates/fragments/dashboard_header.html
+++ b/src/main/resources/templates/fragments/dashboard_header.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Title</title>
+	<meta charset="UTF-8">
+	<title>Title</title>
 </head>
 <body>
 	<nav th:fragment="header"
@@ -43,6 +43,35 @@
 				<span>0</span>
 			</a>
 		</div>
-	</nav>
+	</div>
+	<div class="dropdown" sec:authorize="isAuthenticated()">
+		<img th:src="@{/img/user.png}" style="width: 30px; cursor: pointer;"
+			 id="dropdownMenuButton" data-toggle="dropdown" class="navbar-brand mr-1"
+			 aria-haspopup="true" aria-expanded="false">
+
+		<ul class="dropdown-menu dropdown-menu-right bg-dark">
+			<li class="dropdown-header">User Name</li>
+			<li><a class="dropdown-item" href="#">Edit Profile</a></li>
+			<li><a class="dropdown-item" th:href="@{/buyer/addAddress}"
+				   sec:authorize="hasAuthority('ROLE_BUYER')">Edit Address</a></li>
+			<li><a class="dropdown-item" th:href="@{/buyer/addPayment}"
+				   sec:authorize="hasAuthority('ROLE_BUYER')">Edit Payment Method</a></li>
+			<li><a class="dropdown-item" href="#"
+				   sec:authorize="hasAuthority('ROLE_BUYER')">Orders</a></li>
+			<li><a class="dropdown-item" href="#"
+				   sec:authorize="hasAuthority('ROLE_SELLER')">Orders</a></li>
+			<li class="dropdown-divider"></li>
+			<li><a class="dropdown-item" th:href="@{/logout}">Logout</a></li>
+		</ul>
+	</div>
+
+	<div class="logo" sec:authorize="hasAuthority('ROLE_BUYER')">
+		<a class="navbar-brand mr-1" href="home.html" th:href="@{/home}"
+		   style="float: right;">
+			<img th:src="@{/img/cart.png}" style="width: 30px">
+			<span>0</span>
+		</a>
+	</div>
+</nav>
 </body>
 </html>
