--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.w3.org/1999/xhtml"
-	layout:decorate="~{layouts/dashboard_layout}"
-	xmlns:th="http://www.thymeleaf.org">
+	  layout:decorate="~{layouts/dashboard_layout}"
+	  xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<title>Login</title>
+	<title>Login</title>
 </head>
 <body>
 
@@ -35,16 +35,30 @@
 				<div class="dropdown-divider"></div>
 				<div style="clear: both; display: block; height: 10px;"></div>
 				<div>
-					<a th:href="@{/signup/buyer}" class="dropdown-item" style="color: white;">New Buyer</a>
+					<input type="password" name="password" class="form-control"
+						   placeholder="Password" />
 				</div>
 				<div style="clear: both; display: block; height: 10px;"></div>
+				<input type ="checkbox" name="keepMe"/> Remember Me?
+				<div style="clear: both; display: block; height: 10px;"></div>
 				<div>
-					<a th:href="@{/signup/seller}" class="dropdown-item">New Seller</a>
+					<input type="submit" class="btn btn-primary form-control" value="Sign In" />
 				</div>
+			</form>
+			<div style="clear: both; display: block; height: 10px;"></div>
+			<div class="dropdown-divider"></div>
+			<div style="clear: both; display: block; height: 10px;"></div>
+			<div>
+				<a th:href="@{/signup/buyer}" class="dropdown-item" style="color: white;">New Buyer</a>
+			</div>
+			<div style="clear: both; display: block; height: 10px;"></div>
+			<div>
+				<a th:href="@{/signup/seller}" class="dropdown-item">New Seller</a>
 			</div>
 		</div>
-
 	</div>
+
+</div>
 
 </body>
 </html>
