remove from cart feature

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -13,62 +13,62 @@
 
 
     <div class="container">
-        <h1 >Order List</h1>
+        <h1>Order List</h1>
         <div th:each="order: ${orders}">
+            <div th:if="${order.getItems().size() > 0 }">
+                <table class="table table-bordered table-striped">
+                    <thead class="thead-light">
+                    <tr>
+                        <th>Product Name</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
+                        <th>Seller</th>
+                        <th>Shipping Status</th>
+                        <th>Action</th>
 
-            <table class="table table-bordered table-striped">
-                <thead class="thead-light">
-                <tr>
-                    <th>Product Name</th>
-                    <th>Quantity</th>
-                    <th>Price</th>
-                    <th>Seller</th>
-                    <th>Shipping Status</th>
-                    <th>Action</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="item: ${order.items}">
 
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="item: ${order.items}">
-
-                    <td th:text="${item.getProduct().getName()}">name</td>
-                    <td th:text="${item.getQuantity()}">Quantity</td>
-                    <td th:text="${item.getProduct().getPrice()}">Price</td>
-                    <td th:text="${item.getProduct().getSeller().getUsername()}">Seller</td>
-                    <td th:text="${item.getShippingStatus()}">Shipping Status</td>
-                    <td>
+                        <td th:text="${item.getProduct().getName()}">name</td>
+                        <td th:text="${item.getQuantity()}">Quantity</td>
+                        <td th:text="${item.getProduct().getPrice()}">Price</td>
+                        <td th:text="${item.getProduct().getSeller().getUsername()}">Seller</td>
+                        <td th:text="${item.getShippingStatus()}">Shipping Status</td>
+                        <td>
                     <span th:if="${item.getShippingStatus() == 'prepared' }">
                             <a class="btn btn-danger btn-sm mb-3"
-                               href="#">
+                               th:href="@{'/buyer/removeItem'(id= ${item.getId()})}">
                                 Remove
                             </a>
                         </span>
-                        <span th:if="${item.getShippingStatus() != 'prepared' }">
+                            <span th:if="${item.getShippingStatus() != 'prepared' }">
                             <a class="btn btn-dangerAa btn-sm mb-3 disabled"
                                href="#">
                                 Remove
                             </a>
                     </span>
-                    </td>
+                        </td>
 
-                </tr>
-                </tbody>
-            </table>
-            <div class="row">
-                <div class="col-4">
+                    </tr>
+                    </tbody>
+                </table>
+                <div class="row">
+                    <div class="col-4">
 
-                    <a class="btn btn-info btn-sm mb-3">
-                        Total Price = <span th:text="${order.getTotalPrice()}"></span>
-                    </a>
-                </div>
-                <div class="col-15">
-                    <a class="btn btn-success btn-sm mb-3"
-                       href="#">
-                        Check Out
-                    </a>
+                        <a class="btn btn-info btn-sm mb-3">
+                            Total Price = <span th:text="${order.getTotalPrice()}"></span>
+                        </a>
+                    </div>
+                    <div class="col-15">
+                        <a class="btn btn-success btn-sm mb-3"
+                           href="#">
+                            Check Out
+                        </a>
+                    </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
