--- a/src/main/resources/templates/fragments/dashboard_header.html
+++ b/src/main/resources/templates/fragments/dashboard_header.html
@@ -27,7 +27,7 @@
 				   sec:authorize="hasAuthority('ROLE_BUYER')">Edit Address</a></li>
 			<li><a class="dropdown-item" th:href="@{/buyer/addPayment}"
 				   sec:authorize="hasAuthority('ROLE_BUYER')">Edit Payment Method</a></li>
-			<li><a class="dropdown-item" href="#"
+			<li><a class="dropdown-item" th:href="@{/buyer/order}"
 				   sec:authorize="hasAuthority('ROLE_BUYER')">Orders</a></li>
 			<li><a class="dropdown-item" href="#"
 				   sec:authorize="hasAuthority('ROLE_SELLER')">Orders</a></li>
