--- a/src/main/resources/templates/fragments/dashboard_header.html
+++ b/src/main/resources/templates/fragments/dashboard_header.html
@@ -22,7 +22,7 @@
 
 		<ul class="dropdown-menu dropdown-menu-right bg-dark">
 			<li class="dropdown-header">User Name</li>
-			<li><a class="dropdown-item" href="#">Edit Profile</a></li>
+			<li><a class="dropdown-item" th:href="@{/profile}">Edit Profile</a></li>
 			<li><a class="dropdown-item" th:href="@{/buyer/addAddress}"
 				   sec:authorize="hasAuthority('ROLE_BUYER')">Edit Address</a></li>
 			<li><a class="dropdown-item" th:href="@{/buyer/addPayment}"
